# cmake-imported-rpath-repro

./: gradle-stack.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rpath/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  alpha.cpp  beta.cpp  gamma.cpp
app/src/main/java/com/example/rpath/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rpath/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
